--- a/charts/mosquitto/templates/deployment.yaml
+++ b/charts/mosquitto/templates/deployment.yaml
@@ -1,3 +1,5 @@
+{{- include "mosquitto.validateWorkloadType" . -}}
+{{- if eq .Values.workload.type "Deployment" -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -5,7 +7,7 @@ metadata:
   labels:
     {{- include "mosquitto.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: 1
   selector:
     matchLabels:
       {{- include "mosquitto.selectorLabels" . | nindent 6 }}
@@ -21,6 +23,10 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
+      {{- if .Values.hostNetwork.enabled }}
+      hostNetwork: true
+      dnsPolicy: {{ .Values.hostNetwork.dnsPolicy }}
+      {{- end }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -43,6 +49,12 @@ spec:
             - name: {{ $name }}
               containerPort: {{ $config.targetPort }}
               protocol: {{ $config.protocol }}
+              {{- if and $.Values.hostPorts.enabled (index $.Values.hostPorts $name) (index $.Values.hostPorts $name "port") }}
+              hostPort: {{ index $.Values.hostPorts $name "port" }}
+              {{- if index $.Values.hostPorts $name "hostIP" }}
+              hostIP: {{ index $.Values.hostPorts $name "hostIP" }}
+              {{- end }}
+              {{- end }}
             {{- end }}
             {{- end }}
           {{- with .Values.livenessProbe }}
@@ -96,3 +108,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
