--- a/cr.yaml
+++ b/cr.yaml
@@ -2,14 +2,14 @@
 # https://github.com/helm/chart-releaser
 
 # GitHub repository owner and name
-owner: bdclark  # Update this to your GitHub username
-repo: helm-charts  # Update this to your repository name
+owner: bdclark
+repo: helm-charts
 
 # Package path where chart packages will be stored
 package-path: .cr-release-packages
 
 # Git configuration
-git-repo: https://github.com/bdclark/helm-charts  # Update this URL
+git-repo: https://github.com/bdclark/helm-charts
 git-base-url: https://api.github.com/
 git-upload-url: https://uploads.github.com/
 
@@ -28,4 +28,4 @@ pages-index-dir: .
 skip-existing: true
 
 # Chart path
-charts-repo-url: https://bdclark.github.io/helm-charts  # Update this URL
+charts-repo-url: https://bdclark.github.io/helm-charts
