--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,11 +42,13 @@ jobs:
         uses: helm/chart-releaser-action@v1.7.0
         with:
           config: cr.yaml
+          mark_as_latest: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
   pages:
     needs: release
+    if: success()
     permissions:
       pages: write
       id-token: write
@@ -55,19 +57,23 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout gh-pages
         uses: actions/checkout@v4
         with:
           ref: gh-pages
+        continue-on-error: true
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        if: success()
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: '.'
+        if: success()
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        if: success()
