--- a/charts/mosquitto/values.yaml
+++ b/charts/mosquitto/values.yaml
@@ -179,15 +179,27 @@ auth:
     # Defaults to "passwd" if not specified
     key: "passwd"
 
-  # Access Control Lists
-  acls: []
-    # - user: admin
-    #   topic: "#"
-    #   access: readwrite
-    # - user: user1
-    #   topic: "devices/user1/#"
-    #   access: readwrite
-    # - pattern: "readwrite %u/#"  # %u replaced with username
+  # Access Control Lists (ACL file format)
+  # Multi-line string in Mosquitto ACL file format
+  # Topics before first "user" line apply to anonymous clients (if allow_anonymous true)
+  # Use "pattern" keyword for rules that apply to all authenticated users
+  # See https://mosquitto.org/man/mosquitto-conf-5.html for full ACL syntax
+  acls: ""
+    # acls: |
+    #   # Anonymous user topics (only if allow_anonymous true)
+    #   topic read public/#
+    #   topic read status/#
+    #
+    #   # Pattern rules apply to all authenticated users
+    #   pattern readwrite devices/%u/#
+    #
+    #   # User-specific topics
+    #   user admin
+    #   topic readwrite #
+    #
+    #   user sensor1
+    #   topic write sensors/sensor1/data
+    #   topic read sensors/sensor1/commands
 
 persistence:
   enabled: false
